--- a/A/Altice/Altice_February2020/ads/OPT_HFC_PFL_Gig_69/300x250/300x250_frame1.html
+++ b/A/Altice/Altice_February2020/ads/OPT_HFC_PFL_Gig_69/300x250/300x250_frame1.html
@@ -77,7 +77,7 @@
   <!-- Start of overrode asset attributes values -->
 <script type="text/javascript">
 amo.registerClick("clickUrl","https://www.altice.com");
-amo.registerAttribute("frameVideo1", "TEXT", "300x250_Brand-HFC-Gig.mp4");
+amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altice/2020-02/300x250_Brand-HFC-Gig.mp4");
 amo.registerAttribute("ctaText","TEXT","Learn more");
 amo.registerAttribute("frameImage2","IMAGE","1x1.png");
 amo.registerAttribute("frameImage3","IMAGE","300x250_BackgroundImage_Frame03.jpg");
