--- a/A/Altice/Altice_February2020/ads/OPT_MC_64/728x90/728x90_frame4.html
+++ b/A/Altice/Altice_February2020/ads/OPT_MC_64/728x90/728x90_frame4.html
@@ -23,8 +23,8 @@
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
-        width: 300px;
-        height: 250px;
+        width: 728px;
+        height: 90px;
         font-family: Arial,Helvetica,sans-serif;
         color: #fff;
       }
@@ -64,8 +64,8 @@
       .verticalBar {
         position: absolute;
         top:0px;
-        width: 7px;
-        height: 58px;
+        width: 5px;
+        height: 24px;
         background-color: #fff;
         transform-origin: top center;
       }
@@ -76,21 +76,26 @@
     </style>
   <!-- Start of overrode asset attributes values -->
 <script type="text/javascript">
+amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altice/2020-02/728x90_multicultural_animation.mp4");
 amo.registerClick("clickUrl","https://www.altice.com");
-amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altice/2020-02/300x250_Brand-HFC-Gig.mp4");
-amo.registerAttribute("ctaText","TEXT","Learn more");
-amo.registerAttribute("frameImage2","IMAGE","1x1.png");
-amo.registerAttribute("frameImage3","IMAGE","300x250_BackgroundImage_Frame03.jpg");
-amo.registerAttribute("frameImage31","IMAGE","300x250_OPT_Endframe_Frame03.png");
-amo.registerAttribute("frameText1","TEXT","More speed for more devices");
-amo.registerAttribute("frameText12","TEXT","Bring every room to life");
-amo.registerAttribute("frameText13","TEXT","<br>with 1 Gig Internet");
-amo.registerAttribute("frameText21", "TEXT", "<div style='top: 15px;left: 23px;line-height:1.1;'><div style='font-size: 25px;letter-spacing: 0.1px;'>1 Gig Internet</div></div>");
-amo.registerAttribute("frameText22", "TEXT", "<div style='top: 40px;left: 101px;line-height:1.1;'><div style='color: #0084d6;font-size: 62px;'><sup style='font-size: 53%;vertical-align: 50%;margin-right: 3px;'>$</sup>69<sup style='font-size: 53%;vertical-align: 50%;margin-left: 3px;'>99</sup></div><div style='font-size: 14px;letter-spacing:-0.1px;position: absolute;top: 40px;left: 93px;width: 100px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 9.8px;margin-top: 1px;position: absolute;top: 22px;left: -91px;'>plus taxes, fees &amp; charges</div></div></div>");
-amo.registerAttribute("frameText23", "TEXT", "<div style='top: 129px;left: 25px;line-height: 1.05;font-size: 14px;letter-spacing: -0.1px;' class='AlticeRegular'><div><span style='color:#0084d6;padding-right:5px;'>+</span>Up to 940 Mbps</div><div><span style='color:#0084d6;padding-right:5px;'>+</span>$100 Amazon.com Gift Card<div style='font-size: 8.3px;margin-top: 2px;margin-left: 11px;'>Restrictions apply</div></div></div><div class='AlticeRegular' style='position: absolute;top: 183px;left: 24px;font-size: 8.5px;line-height: 1.2;letter-spacing: -0.1px;'>Wired connections.<br>WiFi speeds may vary.</div>");
-amo.registerAttribute("frameText31","TEXT","&nbsp;");
-amo.registerAttribute("frameText32","TEXT","&nbsp;");
-amo.registerAttribute("frameText33","TEXT","&nbsp;");
+amo.registerAttribute("ctaText","TEXT","Ver más");
+amo.registerAttribute("frameImage2","IMAGE","728x90_OPT_AO_FEB_Amz_64Yr2_Img_Frame02.png");
+amo.registerAttribute("frameImage3","IMAGE","1x1.png");
+amo.registerAttribute("frameImage4","IMAGE","728x90_OPT_AO_FEB_Amz_64Yr2_AmzCard100_Img_Frame04.png");
+amo.registerAttribute("frameImage5","IMAGE","1x1.png");
+amo.registerAttribute("frameText1","TEXT","&nbsp;");
+amo.registerAttribute("frameText21", "TEXT", "<div style='top: 6px;left:20px;line-height:1.1;'><span style='font-size: 24px;letter-spacing: 0.2px;'>Altice One e Internet</span></div>");
+amo.registerAttribute("frameText22", "TEXT", "<div style='top: 28px;left: 22px;line-height:1.1;'><div style='color: #0084d6;font-size:60px;margin-top:-4px;margin-left: -3px;letter-spacing:-2.5px;'><sup style='font-size:60%;vertical-align:43%;'>$</sup>64<sup style='font-size:60%;vertical-align:43%;letter-spacing: -1px;margin-left: 0px;'>99</sup></div><div style='position: relative;font-size: 14px;letter-spacing:-0.1px;top:-41px;left: 125px;'>mes/durante 2 años<div class='AlticeRegular' style='font-size: 11px;margin-top:4px;margin-left: -38px;'>más tarifas, imptos. y cargos</div></div></div>");
+amo.registerAttribute("frameText23", "TEXT", "&nbsp;");
+amo.registerAttribute("frameText31","TEXT","<div style='top:12px;left:19px;line-height:1.4;font-size:17.5px;padding-left:14pxm;text-indent:-14px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>Internet de hasta 200 megas</div></div>");
+amo.registerAttribute("frameText32","TEXT","<div style='top:38px;left:19px;line-height:1.4;font-size:17.5px;padding-left:14pxm;text-indent:-14px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>Más de 220 canales</div></div>");
+amo.registerAttribute("frameText33","TEXT","<div style='top:12px;left:300px;line-height:1.4;font-size:17.5px;padding-left:16pxm;text-indent:-16px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>¿Atrapado en un contrato?<br>Te ayudamos con hasta $500</div></div><div class='AlticeRegular' style='position:absolute;top:68px;left:22px;width:250px;font-size:9.5px;line-height:1.1;'>Conexión por cable. Velocidades WiFi podrían variar.</div>");
+amo.registerAttribute("frameText41","TEXT","<div style='top:25px;left:155px;line-height:1.1;font-size:18px;'>Tarjeta de regalo<br>Amazon.com de</div>");
+amo.registerAttribute("frameText42","TEXT","<div style='top:5px;left:318px;line-height:1.6;letter-spacing:-2px;'><div style='color: #0084d6;font-size:50px;'><sup style='font-size:60%;vertical-align: 31%;margin-right: 2px;'>$</sup>100</div></div>");
+amo.registerAttribute("frameText43","TEXT","<div class='AlticeRegular' style='top:40px;left:430px;line-height:1.1;font-size:9.5px;'>Aplican restricciones.<br>Vea amazon.com/gc-legal</div>");
+amo.registerAttribute("frameText51", "TEXT", "<div style='top: 6px;left:20px;line-height:1.1;'><span style='font-size: 24px;letter-spacing: 0.2px;'>Altice One e Internet</span></div>");
+amo.registerAttribute("frameText52", "TEXT", "<div style='top: 28px;left: 22px;line-height:1.1;'><div style='color: #0084d6;font-size:60px;margin-top:-4px;margin-left: -3px;letter-spacing:-2.5px;'><sup style='font-size:60%;vertical-align:43%;'>$</sup>64<sup style='font-size:60%;vertical-align:43%;letter-spacing: -1px;margin-left: 0px;'>99</sup></div><div style='position: relative;font-size: 14px;letter-spacing:-0.1px;top:-41px;left: 125px;'>mes/durante 2 años<div class='AlticeRegular' style='font-size: 11px;margin-top:4px;margin-left: -38px;'>más tarifas, imptos. y cargos</div></div></div>");
+amo.registerAttribute("frameText53", "TEXT", "<div style='top:26px;left:340px;line-height:1.3;font-size:14px;padding-left:14pxm;text-indent:-14px;'><span style='color:#0084d6;padding-right:5px;'>+</span>Tarjeta de regalo<br>Amazon.com de $100<div style='padding-top:1px;'><span style='color:#0084d6;padding-right:5px;'>+</span>Sin contratos</div></div>");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -113,15 +118,22 @@ amo.registerAttribute("frameText33","TEXT","&nbsp;");
     <div id="frameText22" class="frameText">!{frameText22}</div>
     <div id="frameText23" class="frameText">!{frameText23}</div>
     <div id="frameImage3" class="asset frameImage" data-image="frameImage3"></div>
-    <div id="frameImage31" class="asset frameImage" data-image="frameImage31"></div>
     <div id="frameText31" class="frameText">!{frameText31}</div>
     <div id="frameText32" class="frameText">!{frameText32}</div>
     <div id="frameText33" class="frameText">!{frameText33}</div>
-    <div id="priceLabel" class="asset adSizeContainer" data-image="priceLabel"></div>
+    <div id="frameImage4" class="asset frameImage" data-image="frameImage4"></div>
+    <div id="frameText41" class="frameText">!{frameText41}</div>
+    <div id="frameText42" class="frameText">!{frameText42}</div>
+    <div id="frameText43" class="frameText">!{frameText43}</div>
+    <div id="frameImage5" class="asset frameImage" data-image="frameImage5"></div>
+    <div id="frameText51" class="frameText">!{frameText51}</div>
+    <div id="frameText52" class="frameText">!{frameText52}</div>
+    <div id="frameText53" class="frameText">!{frameText53}</div>
+    <!-- <div id="priceLabel" class="asset adSizeContainer" data-image="priceLabel"></div> -->
     <div id="cta" class="text AlticeBold"
       data-text="ctaText"
-      style="top: 210px;
-        left: 20px;
+      style="top: 52px;
+        right: 61px;
         width: 88px;
         height: 20px;
         font-size: 12px;
@@ -134,40 +146,21 @@ amo.registerAttribute("frameText33","TEXT","&nbsp;");
       transition:opacity ease-out 0.3s, transform ease-out 0.3s;
       background-color:#000;
       opacity:1;">
-      <!-- <div id="ref" class="asset adSizeContainer"data-image="ref"></div> -->
-      <div id="frameVideo1" style="top:0px;left:0px;width:300px;height:250px;"><video muted playsinline autoplay style="width:100%;"></video></div>
-      <div id="frameText1" class="text-top AlticeBold"
-        data-text="frameText1"
-        style="top: 113px;
-          left: 10px;
-          width: 280px;
-          height: 50px;
-          font-size: 16.5px;
-          line-height:1.2;">
-      </div>
-      <div id="frameText12" class="text-top AlticeBold"
-        data-text="frameText12"
-        style="top: 113px;
-          left: 10px;
-          width: 280px;
-          height: 50px;
-          font-size: 16.5px;
-          line-height:1.2;">
-      </div>
-      <div id="frameText13" class="text-top AlticeBold"
-        data-text="frameText13"
-        style="top: 113px;
-          left: 10px;
-          width: 280px;
-          height: 50px;
-          font-size: 16.5px;
-          line-height:1.2;">
-      </div>
+
+      <!-- <div id="ref" class="asset"
+        data-image="ref"
+        style="top:0px;
+          left:0px;
+          width:inherit;
+          height:inherit;">
+      </div> -->
+      <div id="frameVideo1" style="top:0px;left:0px;width:728px;height:70px;"><video muted playsinline autoplay style="width:100%;"></video></div>
+      <div id="frameText1" class="frameText">!{frameText1}</div>
       <div id="introLogoImage" class="asset adSizeContainer" data-image="introLogoImage"></div>
       <div id="introCta" class="text AlticeBold"
         data-text="ctaText"
-        style="top: 210px;
-          left: 20px;
+        style="top: 52px;
+          right: 61px;
           width: 88px;
           height: 20px;
           font-size: 12px;
@@ -175,7 +168,6 @@ amo.registerAttribute("frameText33","TEXT","&nbsp;");
           color:#fff;">
       </div>
     </div>
-
     <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all 0.5s ease 1s;transition:all 0.5s ease 1s;"></div>
   </div>
   <div id="loadFont" style="width:0;height:0;overflow:hidden;">
@@ -185,8 +177,8 @@ amo.registerAttribute("frameText33","TEXT","&nbsp;");
   <script type="text/javascript">
     var ad = new Ad({
       root: document.querySelector('#ad'),
-      width: 300,
-      height: 250,
+      width: 728,
+      height: 90,
       borderWidth: 1,
       borderColor: '#000'
     });
@@ -195,18 +187,17 @@ amo.registerAttribute("frameText33","TEXT","&nbsp;");
         cam: {},
         feed: [],
         staticData: {
-          logoImage: 'images/300x250_Logo_Optimum_White.png',
-          introLogoImage: 'images/300x250_Logo_Optimum_White.png',
+          logoImage: 'images/728x90_Logo_Optimum_White.png',
+          introLogoImage: 'images/728x90_Logo_Optimum_White.png',
+          // priceLabel: '728x90_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
           frameBackground: '1x1.png',
-          priceLabel: '300x250_PFL_Image.png',
           // starImage: 'images/star.svg',
           ctaBtn: '#0084d6',
           ctaBtnHover: '#005990',
-          // ref: 'ref.png',
+          // ref: 'ref2.png',
         },
         beforeLoad: function(data){
           data.map(function(content){
-
           });
           return data;
         }
@@ -218,11 +209,13 @@ amo.registerAttribute("frameText33","TEXT","&nbsp;");
         setTimeout(function(){ ad.layers.frameVideo1.querySelector('video').src = adData.frameVideo1; },800);
 
         textUpdate();
-        gsap.set('.frameImage', {x:'100%'});
-        gsap.set('.frameText, #priceLabel', {x:'-100%'});
+        gsap.set('.frameImage', {y:'100%'});
+        gsap.set('.frameText', {y:'100%'});
+        gsap.set('div[id^="frameText"][id$="1"], #priceLabel', {x:'-100%',y:0});
         var priceFrameAnimation = function(frame){
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameText'+frame+'1, #frameImage'+frame, {x:0,y:0})
+          .to('#frameImage'+frame, {x:0,y:0})
+          .to('#frameText'+frame+'1', {delay:-0.3, x:0,y:0})
           .to('#frameText'+frame+'2', {delay:-0.2, x:0,y:0})
           .to('#frameText'+frame+'3', {delay:-0.2, x:0,y:0})
           .to('#priceLabel', {delay:-0.2, x:0,y:0});
@@ -236,44 +229,45 @@ amo.registerAttribute("frameText33","TEXT","&nbsp;");
         }
         var generalFrameAnimation = function(frame){
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameText'+frame+'1, #frameImage'+frame, {x:0,y:0})
+          .to('#frameImage'+frame, {x:0,y:0})
+          .to('#frameText'+frame+'1', {delay:-0.3, x:0,y:0})
           .to('#frameText'+frame+'2', {delay:-0.2, x:0,y:0})
           .to('#frameText'+frame+'3', {delay:-0.2, x:0,y:0});
         }
-        var endFrameAnimation = function(frame){
-          gsap.set('#frameImage'+frame+', #frameImage'+frame+'1', {x:'0'});
+        var animateFrame5 = function(flag){
+          var frameId = 5;
+          gsap.set('#frameBackground', {display: 'none'});
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .from('#frameImage'+frame, {autoAlpha:0})
-          .to('#cta', {delay:-0.3,top: 182,left: 101,width: 94,height: 22,fontSize: 13})
-          .from('#frameImage'+frame+'1', {autoAlpha:0,y:'10%'})
+          .to('#frameImage'+frameId, {duration:0, onComplete: priceFrameAnimation, onCompleteParams:[5]})
+          // .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', {delay: 2.2, opacity:0});
+        }
+        var animateFrame4 = function(flag){
+          var frameId = 4;
+          gsap.set('#frameBackground', {display: 'block'});
+          gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
+          .to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[4]})
+          .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.2, opacity:0, onComplete: animateFrame5}));
         }
         var animateFrame3 = function(flag){
           var frameId = 3;
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameImage'+frameId, {duration:0, onComplete: endFrameAnimation, onCompleteParams:[3]})
-          // .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.8, opacity:0, onComplete: animateFrame4}));
+          .to('#frameImage'+frameId, {duration:0, onComplete: bulletFrameAnimation, onCompleteParams:[3]})
+          .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.8, opacity:0, onComplete: animateFrame4}));
         }
         var animateFrame2 = function(flag){
           var frameId = 2;
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameImage'+frameId, {duration:0, onComplete: priceFrameAnimation, onCompleteParams:[frameId]})
-          .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"],#priceLabel', (flag==true?{}:{delay: 2.2, opacity:0, onComplete: animateFrame3}));
+          .to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[frameId]})
+          .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.2, opacity:0, onComplete: animateFrame3}));
         }
         var animateFrame1 = function(flag){
-          ad.layers.frameVideo1.querySelector('video').onplay = function(){
-            gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-            .from('#frameText1', {delay:0.5, autoAlpha:0, y:10})
-            .to('#frameText1', {delay:1.8, autoAlpha:0})
-            .from('#frameText12', {autoAlpha:0, y:10})
-            .from('#frameText13', {delay:0.5, autoAlpha:0, y:10})
-          }
           ad.layers.frameVideo1.querySelector('video').onended = function(){
             gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
             .to('#frame1', (flag==true?{}:{delay:0.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
           }
         }
         if('frame1' in ad.layers) ad.layers.frame1.remove();
-                    gsap.delayedCall(1.2, animateFrame2, [true]);
+                    gsap.delayedCall(1.2, animateFrame4, [true]);
       });
     }, 2000);
   </script>
